--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "explicit"]
 	path = explicit
 	url = https://github.com/akrzemi1/explicit.git
+[submodule "doctest"]
+	path = doctest
+	url = https://github.com/onqtam/doctest.git
