--- a/playground/CMakeLists.txt
+++ b/playground/CMakeLists.txt
@@ -5,6 +5,7 @@ project(explicit_playground)
 add_executable(explicit_playground
   main_test.cpp
   not_null.cpp
+  out_param.cpp
   tagged_bool.cpp
   )
 
