add playground file for testing xplicit-only_when

--- a/playground/CMakeLists.txt
+++ b/playground/CMakeLists.txt
@@ -5,13 +5,14 @@ project(explicit_playground)
 add_executable(explicit_playground
   main_test.cpp
   not_null.cpp
+  only_when.cpp
   out_param.cpp
   tagged_bool.cpp
   )
 
 target_compile_features(explicit_playground
   PRIVATE
-    cxx_std_14
+    cxx_std_17
   )
 
 target_include_directories(explicit_playground
